# Market

./: .gitignore  README.md
projects/Markets/: Markets.sln
projects/Markets/Markets.App.Console/: Markets.App.Console.cpp  Markets.App.Console.vcxproj  Markets.App.Console.vcxproj.filters
projects/Markets/Markets.App.WindowsDesktop/: Markets.App.WindowsDesktop.cpp  Markets.App.WindowsDesktop.rc  Markets.App.WindowsDesktop.vcxproj  Markets.App.WindowsDesktop.vcxproj.filters  Resource.h
projects/Markets/Markets.Data/: Markets.Data.vcxproj  README.md
projects/Markets/Markets.DataStructures/: BinarySearchTree.h  Markets.DataStructures.cpp  Markets.DataStructures.ixx  Markets.DataStructures.vcxproj  Markets.DataStructures.vcxproj.filters  RedBlackTree.cpp  (+1 more)
projects/YFinance/: README.md  YFinance.sln
resources/docs/: pointers.htm
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/.github/workflows/: ci.yml
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/examples/: CMakeLists.txt  benchmark_read.c  benchmark_read_parallel.c  benchmark_write.c  bsp-ls.c  bsp2mtx.c  check_equivalence.c  check_equivalence_parallel.c  mtx2bsp.c  simple_matrix_read.c  simple_matrix_write.c  simple_read.c  simple_write.c
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/examples/cpp/: CMakeLists.txt  benchmark_read.cpp  benchmark_write.cpp  bsp-ls.cpp  bsp2mtx.cpp  check_equivalence.cpp  mtx2bsp.cpp  simple_matrix_read.cpp  simple_matrix_write.cpp  simple_read.cpp  simple_write.cpp
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/include/: CMakeLists.txt
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/include/binsparse/: array.h  binsparse.h  convert_matrix.h  generate.h  hdf5_wrapper.h  matrix.h  matrix_formats.h  minimize_values.h  read_matrix.h  structure.h  types.h  write_matrix.h
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/include/binsparse/detail/: allocator.h  declamp_values.h  detail.h  parse_dataset.h  shm_tools.h
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/include/binsparse/detail/cpp/: array.hpp
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/include/binsparse/matrix_market/: coo_sort_tools.h  matrix_market_inspector.h  matrix_market_read.h  matrix_market_type_t.h  matrix_market_write.h
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/src/: CMakeLists.txt  read_matrix.c  write_matrix.c
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/test/: CMakeLists.txt
resources/docs/_Matrices/GraphBLAS/binsparse-reference-c/test/bash/: CMakeLists.txt  test-cpp.sh  test.sh
(+191 files in other folders)
